# quickshell

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  HACKING.md  Justfile  README.md  default.nix  flake.nix  hm-module.nix  meson.build  meson.options  outfoxxed-quickshell.scm  overlay.nix  package.nix  quickshell.scm  shell.nix  unwrapped.nix
src/: CMakeLists.txt  main.cpp  meson.build
src/bluetooth/: CMakeLists.txt  adapter.cpp  adapter.hpp  agent.cpp  agent.hpp  bluez.cpp  bluez.hpp  device.cpp  device.hpp  meson.build  module.md  org.bluez.Adapter.xml  org.bluez.Agent.xml  org.bluez.AgentManager.xml  org.bluez.Device.xml
src/bluetooth/pch/: pch.hpp
src/core/: CMakeLists.txt  boundcomponent.cpp  boundcomponent.hpp  build.hpp.in  clock.cpp  clock.hpp  colorquantizer.cpp  colorquantizer.hpp  common.cpp  common.hpp  crashinfo.cpp  crashinfo.hpp  datastream.hpp  debuginfo.cpp  debuginfo.hpp  desktopentry.cpp  desktopentry.hpp  desktopentrymonitor.cpp  desktopentrymonitor.hpp  desktoputils.cpp  desktoputils.hpp  doc.hpp  easingcurve.cpp  easingcurve.hpp  elapsedtimer.cpp  elapsedtimer.hpp  enginecontext.hpp  filelogger.cpp  filelogger.hpp  filelogger_p.hpp  floatingwindow.cpp  floatingwindow.hpp  fzy.cpp  fzy.h  generation.cpp  generation.hpp  hook.cpp  iconimageprovider.cpp  iconimageprovider.hpp  iconprovider.cpp  (+91 more)
src/core/pch/: pch.hpp
src/core/test/: CMakeLists.txt  meson.build  objectmodel.cpp  objectmodel.hpp  popupwindow.cpp  ringbuf.cpp  ringbuf.hpp  scriptmodel.cpp  scriptmodel.hpp  stacklist.cpp  stacklist.hpp  transformwatcher.cpp  transformwatcher.hpp
src/cpp/: layershell.cpp  layershell.hpp  main.cpp  module.md  persistentprops.hpp  proxywindow.cpp  proxywindow.hpp  qmlglobal.cpp  qmlglobal.hpp  qmlscreen.cpp  qmlscreen.hpp  region.cpp  region.hpp  reload.cpp  reload.hpp  rootwrapper.cpp  rootwrapper.hpp  scavenge.cpp  scavenge.hpp  shell.cpp  shell.hpp  shellwindow.cpp  shellwindow.hpp  variants.cpp  variants.hpp
src/crash/: CMakeLists.txt  handler.cpp  handler.hpp  interface.cpp  interface.hpp  main.cpp  main.hpp  meson.build
src/dbus/: CMakeLists.txt  bus.cpp  bus.hpp  dbus_objectmanager_types.hpp  dbusutil.cpp  dbusutil.hpp  meson.build  objectmanager.cpp  objectmanager.hpp  org.freedesktop.DBus.ObjectManager.xml  org.freedesktop.DBus.Properties.xml  org.freedesktop.ScreenSaver.xml  org.quickshell.SessionLock.xml  properties.cpp  properties.hpp  screensaver_dbus.cpp  screensaver_dbus.hpp  session_lock_dbus.cpp  session_lock_dbus.hpp
src/dbus/dbusmenu/: CMakeLists.txt  com.canonical.dbusmenu.xml  dbus_menu_types.cpp  dbus_menu_types.hpp  dbusmenu.cpp  dbusmenu.hpp  meson.build  module.md
src/debug/: CMakeLists.txt  lint.cpp  lint.hpp  meson.build
src/http/: CMakeLists.txt  client.cpp  client.hpp  modules.md  response.cpp  response.hpp
src/io/: CMakeLists.txt  FileView.qml  datastream.cpp  datastream.hpp  fileview.cpp  fileview.hpp  init.cpp  ipc.cpp  ipc.hpp  ipccomm.cpp  ipccomm.hpp  ipchandler.cpp  ipchandler.hpp  jsonadapter.cpp  jsonadapter.hpp  meson.build  module.md  process.cpp  process.hpp  processcore.cpp  processcore.hpp  socket.cpp  socket.hpp
src/io/pch/: pch.hpp
src/io/test/: CMakeLists.txt  datastream.cpp  datastream.hpp  meson.build  process.cpp  process.hpp
src/ipc/: CMakeLists.txt  ipc.cpp  ipc.hpp  ipccommand.hpp  meson.build
src/launch/: CMakeLists.txt  command.cpp  launch.cpp  launch_p.hpp  main.cpp  main.hpp  meson.build  parsecommand.cpp
src/launch/pch/: pch.hpp
src/network/: CMakeLists.txt  api.cpp  api.hpp  connection.cpp  connection.hpp  device.cpp  device.hpp  enums.cpp  enums.hpp  frontend.cpp  frontend.hpp  meson.build  module.md  network.cpp  network.hpp  nm.cpp  nm.hpp  nm_adapters.cpp  nm_adapters.hpp  nm_backend.cpp  nm_backend.hpp  nm_connection.cpp  nm_connection.hpp  nm_settings.cpp  nm_settings.hpp  nmdevice.cpp  nmdevice.hpp  note  org.freedesktop.NetworkManager.AccessPoint.xml  org.freedesktop.NetworkManager.Device.Wireless.xml  org.freedesktop.NetworkManager.Device.xml  qml.cpp  qml.hpp  wifi.cpp  wifi.hpp  wired.cpp  wired.hpp
src/network/freebsd/: CMakeLists.txt  backend.cpp  backend.hpp
src/network/nm/: CMakeLists.txt  accesspoint.cpp  accesspoint.hpp  active_connection.cpp  active_connection.hpp  adapters.cpp  adapters.hpp  backend.cpp  backend.hpp  connection.cpp  connection.hpp  (+24 more)
src/services/: CMakeLists.txt  meson.build
src/ui/: CMakeLists.txt  ReloadPopup.qml  Tooltip.qml  meson.build  reload_popup.cpp  reload_popup.hpp
src/wayland/: CMakeLists.txt  init.cpp  layer_surface.cpp  layer_surface.hpp  layershell.cpp  layershell.hpp  meson.build  module.md  output_tracking.cpp  output_tracking.hpp  platformmenu.cpp  platformmenu.hpp  popupanchor.cpp  popupanchor.hpp  session_lock.cpp  session_lock.hpp  shell_integration.cpp  shell_integration.hpp  util.cpp  util.hpp  wayland_window.cpp  wayland_window.hpp  waylandlayershell.cpp  waylandlayershell.hpp  waylandshellwindow.cpp  waylandshellwindow.hpp  wl_proxy_safe_deref.cpp  wlr_layershell.cpp  wlr_layershell.hpp  xdgshell.cpp  xdgshell.hpp
src/webengine/: CMakeLists.txt  webengine.hpp
src/widgets/: CMakeLists.txt  ClippingRectangle.qml  ClippingWrapperRectangle.qml  ClippingWrapperRectangleInternal.qml  IconImage.qml  WrapperItem.qml  WrapperMouseArea.qml  WrapperRectangle.qml  cliprect.cpp  cliprect.hpp  marginwrapper.cpp  marginwrapper.hpp  meson.build  module.md  wrapper.cpp  wrapper.hpp
src/window/: CMakeLists.txt  floatingwindow.cpp  floatingwindow.hpp  init.cpp  meson.build  panelinterface.cpp  panelinterface.hpp  popupwindow.cpp  popupwindow.hpp  proxywindow.cpp  proxywindow.hpp  windowinterface.cpp  windowinterface.hpp
src/windowmanager/: CMakeLists.txt  meson.build  module.md  screenprojection.cpp  screenprojection.hpp  windowmanager.cpp  windowmanager.hpp  windowset.cpp  windowset.hpp  workspace.cpp  workspace.hpp  workspacemodel.cpp  workspacemodel.hpp
src/x11/: CMakeLists.txt  init.cpp  meson.build  panel_window.cpp  panel_window.hpp  util.cpp  util.hpp
(+417 files in other folders)
