option('crash_handler', type: 'feature', description: 'Crash handling and reporting')
option('crashreport_url', type: 'string', value: 'https://github.com/outfoxxed/quickshell/issues/new?template=crash2.yml', description: 'Bug report URL')
option('distributor', type: 'string', value: 'Unset', description: 'Build/package distributor')
option('sockets', type: 'feature', description: 'Unix domain sockets')
option('wayland', type: 'feature', description: 'Wayland support')
option('wl_wlr_layershell', type: 'feature', description: 'Wlroots layer shell')
option('wl_session_lock', type: 'feature', description: 'Session lock')
option('wl_toplevel_management', type: 'feature', description: 'Foreign toplevel management')
option('wl_screencopy', type: 'feature', description: 'Screencopy')
option('wl_screencopy_icc', type: 'feature', description: 'Image copy capture')
option('wl_screencopy_wlr', type: 'feature', description: 'Wlroots screencopy')
option('wl_screencopy_hyprland_toplevel', type: 'feature', description: 'Hyprland toplevel export')
option('hyprland', type: 'feature', description: 'Hyprland')
option('hyprland_ipc', type: 'feature', description: 'IPC')
option('hyprland_global_shortcuts', type: 'feature', description: 'Global shortcuts')
option('hyprland_focus_grab', type: 'feature', description: 'Focus grabbing')
option('hyprland_surface_extensions', type: 'feature', description: 'Surface extensions')
option('x11', type: 'feature', description: 'X11')
option('i3', type: 'feature', description: 'i3/Sway')
option('i3_ipc', type: 'feature', description: 'IPC')
option('dbus', type: 'feature', description: 'DBus')
option('service_status_notifier', type: 'feature', description: 'Status Notifiers (system tray)')
option('service_pipewire', type: 'feature', description: 'PipeWire')
option('service_mpris', type: 'feature', description: 'MPRIS')
option('service_pam', type: 'feature', description: 'PAM')
option('service_polkit', type: 'feature', description: 'Polkit')
option('service_greetd', type: 'feature', description: 'Greetd')
option('service_upower', type: 'feature', description: 'UPower')
option('service_notifications', type: 'feature', description: 'Notifications')
option('bluetooth', type: 'feature', description: 'Bluetooth management support')
option('network', type: 'feature', description: 'Network management support')
option('tests', type: 'feature', description: 'Test suite')
option('malloc', type: 'combo', choices: ['jemalloc', 'tcmalloc', 'system'], value: 'tcmalloc', description: 'Memory allocator')
