dep_drm = dependency('libdrm')
sum_deps += {dep_drm.name(): dep_drm}
qs_p += {
	'Quickshell': {
		'sources': files(
			'boundcomponent.cpp',
			'clock.cpp',
			'colorquantizer.cpp',
			'common.cpp',
			'debuginfo.cpp',
			'desktopentry.cpp',
			'desktopentrymonitor.cpp',
			'easingcurve.cpp',
			'elapsedtimer.cpp',
			'generation.cpp',
			'iconimageprovider.cpp',
			'iconprovider.cpp',
			'imageprovider.cpp',
			'incubator.cpp',
			'instanceinfo.cpp',
			'lazyloader.cpp',
			'logging.cpp',
			'model.cpp',
			'paths.cpp',
			'persistentprops.cpp',
			'platformmenu.cpp',
			'plugin.cpp',
			'popupanchor.cpp',
			'qmlglobal.cpp',
			'qmlscreen.cpp',
			'qsintercept.cpp',
			'qsmenu.cpp',
			'qsmenuanchor.cpp',
			'region.cpp',
			'reload.cpp',
			'retainable.cpp',
			'rootwrapper.cpp',
			'scan.cpp',
			'scanenv.cpp',
			'scriptmodel.cpp',
			'shell.cpp',
			'singleton.cpp',
			'streamreader.cpp',
			'toolsupport.cpp',
			'transformwatcher.cpp',
			'types.cpp',
			'variants.cpp',
		),
		'moc_headers': files(
			'boundcomponent.hpp',
			'clock.hpp',
			'colorquantizer.hpp',
			'desktopentry.hpp',
			'desktopentrymonitor.hpp',
			'easingcurve.hpp',
			'elapsedtimer.hpp',
			'generation.hpp',
			'incubator.hpp',
			'lazyloader.hpp',
			'logging.hpp',
			'logging_p.hpp',
			'model.hpp',
			'persistentprops.hpp',
			'platformmenu.hpp',
			'popupanchor.hpp',
			'qmlglobal.hpp',
			'qmlscreen.hpp',
			'qsintercept.hpp',
			'qsmenu.hpp',
			'qsmenuanchor.hpp',
			'region.hpp',
			'reload.hpp',
			'retainable.hpp',
			'rootwrapper.hpp',
			'scanenv.hpp',
			'scriptmodel.hpp',
			'shell.hpp',
			'singleton.hpp',
			'transformwatcher.hpp',
			'types.hpp',
			'variants.hpp',
		),
		'default_imports': ['Quickshell._Window'],
		'optional_imports': ['Quickshell._Window'],
		'dependencies': dep_drm,
		'include_directories': [include_directories('.'), build_inc],
		'cpp_pch': files('pch/pch.hpp')[0].full_path(),
	},
}

if get_option('tests').allowed()
	subdir('test')
endif
